third_party/rust/async-trait/tests/ui/unsupported-self.stderr
error: Self type of this impl is unsupported in expression position
  --> $DIR/unsupported-self.rs:11:17
   |
11 |         let _ = Self;
   |                 ^^^^
